# stt-decoder

./: Cargo.toml  config.toml
src/: lib.rs  monophone.rs  settings.rs  traits.rs
